--- a/.gitmodules
+++ b/.gitmodules
@@ -2,23 +2,29 @@
 	path = bootstrap/oh-my-zsh
 	url = https://github.com/ohmyzsh/ohmyzsh
 	shallow = true
+	branch = master
 [submodule "bootstrap/zsh-autosuggestions"]
 	path = bootstrap/zsh-autosuggestions
 	url = https://github.com/zsh-users/zsh-autosuggestions
 	shallow = true
+	branch = master
 [submodule "bootstrap/fast-syntax-highlighting"]
 	path = bootstrap/fast-syntax-highlighting
 	url = https://github.com/zdharma-continuum/fast-syntax-highlighting
 	shallow = true
+	branch = master
 [submodule "bootstrap/powerlevel10k"]
 	path = bootstrap/powerlevel10k
 	url = https://github.com/romkatv/powerlevel10k
 	shallow = true
+	branch = master
 [submodule "bootstrap/zsh-completions"]
 	path = bootstrap/zsh-completions
 	url = https://github.com/zsh-users/zsh-completions
 	shallow = true
+	branch = master
 [submodule "bootstrap/oh-my-bash"]
 	path = bootstrap/oh-my-bash
 	url = https://github.com/ohmybash/oh-my-bash
 	shallow = true
+	branch = master
