--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -4,6 +4,7 @@ site_name: dotfiles
 nav:
     - Home 🏠: index.md
     - Features ✨: features.md
+    - Manual Installation 📦: manual_installation.md
 theme:
     favicon: https://juftin.com/favicon.ico
     logo: https://raw.githubusercontent.com/juftin/juftin/main/static/juftin.png
