--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -6,12 +6,17 @@ tap "hashicorp/tap"
 tap "homebrew/bundle"
 tap "homebrew/cask-fonts"
 tap "homebrew/services"
+tap "derailed/k9s"
 
 ##########################################################
 ####################### UTILITIES ########################
 ##########################################################
 
+brew "asdf"
 brew "awsume"
+brew "aws-sso-util"
+brew "ca-certificates"
+brew "checkov"
 brew "curl"
 brew "direnv"
 brew "ffmpeg"
@@ -26,14 +31,18 @@ brew "helm"
 brew "htop"
 brew "hugo"
 brew "jq"
+brew "k9s"
 brew "make"
 brew "neovim"
 brew "node"
 brew "openjdk"
 brew "pipx"
+brew "pre-commit"
 brew "ripgrep"
+brew "sops"
 brew "terraform"
 brew "terragrunt"
+brew "tmate"
 brew "thefuck"
 brew "tree"
 brew "wget"
@@ -50,8 +59,9 @@ cask "docker"
 cask "hammerspoon"
 cask "iterm2"
 cask "lens"
+cask "ngrok"
 cask "spotify"
-cask "syntax-highlight"
+cask "syntax-highlight", args: { no_quarantine: true }
 cask "vlc"
 
 ##########################################################
