--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -2,11 +2,8 @@
 ######################### TAPS ###########################
 ##########################################################
 
-tap "hashicorp/tap"
 tap "homebrew/bundle"
-tap "homebrew/cask-fonts"
 tap "homebrew/services"
-tap "derailed/k9s"
 
 ##########################################################
 ####################### UTILITIES ########################
@@ -24,6 +21,7 @@ brew "gh"
 brew "git"
 brew "git-lfs"
 brew "glances"
+brew "gnupg"
 brew "go"
 brew "grep"
 brew "helm"
@@ -36,6 +34,7 @@ brew "make"
 brew "nano"
 brew "neovim"
 brew "node"
+brew "nvm"
 brew "openjdk"
 brew "pipx"
 brew "pre-commit"
@@ -43,7 +42,6 @@ brew "ripgrep"
 brew "sops"
 brew "terraform"
 brew "terragrunt"
-brew "tmate"
 brew "thefuck"
 brew "tree"
 brew "wget"
@@ -57,7 +55,6 @@ cask "1password"
 cask "amazon-q"
 cask "caffeine"
 cask "cyberduck"
-cask "devpod"
 cask "docker"
 cask "elgato-stream-deck"
 cask "google-chrome"
@@ -65,8 +62,7 @@ cask "hammerspoon"
 cask "iterm2"
 cask "jetbrains-toolbox"
 cask "lens"
-cask "logi-options-plus"
-cask "ngrok"
+cask "logi-options+"
 cask "ollama"
 cask "slack"
 cask "spotify"
