--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -23,6 +23,7 @@ brew "git-lfs"
 brew "glances"
 brew "gnupg"
 brew "go"
+brew "go-task/tap/go-task"
 brew "grep"
 brew "helm"
 brew "htop"
@@ -37,7 +38,6 @@ brew "node"
 brew "nvm"
 brew "openjdk"
 brew "pipx"
-brew "pre-commit"
 brew "ripgrep"
 brew "sops"
 brew "terraform"
@@ -57,6 +57,7 @@ cask "caffeine"
 cask "cyberduck"
 cask "docker"
 cask "elgato-stream-deck"
+cask "github"
 cask "google-chrome"
 cask "hammerspoon"
 cask "iterm2"
@@ -67,6 +68,7 @@ cask "ollama"
 cask "slack"
 cask "spotify"
 cask "syntax-highlight", args: { no_quarantine: true }
+cask "visual-studio-code"
 cask "vlc"
 cask "zoom"
 
