--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -6,6 +6,7 @@ tap "homebrew/bundle"
 tap "homebrew/services"
 tap "hashicorp/tap"
 tap "go-task/tap"
+tap "juftin/terraform-docs-recursive", "https://github.com/juftin/terraform-docs-recursive"
 
 ##########################################################
 ####################### UTILITIES ########################
@@ -27,9 +28,11 @@ brew "gnupg"
 brew "go"
 brew "go-task/tap/go-task"
 brew "grep"
+brew "hashicorp/tap/terraform"
 brew "helm"
 brew "htop"
 brew "hugo"
+brew "juftin/terraform-docs-recursive/terraform-docs-recursive"
 brew "jq"
 brew "k9s"
 brew "libomp"
@@ -42,7 +45,7 @@ brew "openjdk"
 brew "pipx"
 brew "ripgrep"
 brew "sops"
-brew "hashicorp/tap/terraform"
+brew "terraform-docs"
 brew "terragrunt"
 brew "thefuck"
 brew "tree"
@@ -68,6 +71,7 @@ cask "lens"
 cask "logi-options+"
 cask "ollama"
 cask "slack"
+cask "sourcetree"
 cask "spotify"
 cask "syntax-highlight", args: { no_quarantine: true }
 cask "visual-studio-code"
