--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -33,6 +33,7 @@ brew "helm"
 brew "htop"
 brew "hugo"
 brew "juftin/terraform-docs-recursive/terraform-docs-recursive"
+brew "jc"
 brew "jq"
 brew "k9s"
 brew "libomp"
