--- a/tools/vscode/settings.json
+++ b/tools/vscode/settings.json
@@ -1,4 +1,7 @@
 {
+    "[json]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
     "[jsonc]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
