--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,9 @@
-default_stages: [commit]
+default_stages: [pre-commit]
 fail_fast: false
 
 repos:
     - repo: https://github.com/pre-commit/pre-commit-hooks
-      rev: v4.5.0
+      rev: v5.0.0
       hooks:
           - id: trailing-whitespace
           - id: end-of-file-fixer
@@ -21,9 +21,12 @@ repos:
             args: [--print-width=88, --tab-width=4]
 
     - repo: https://github.com/scop/pre-commit-shfmt
-      rev: v3.8.0-1
+      rev: v3.11.0-1
       hooks:
           - id: shfmt
+            types: [file]
+            files: (^bin/|^shell/|^linux/|\.sh$)
+            exclude: '\.md$'
 
     - repo: https://github.com/JohnnyMorganz/StyLua
       rev: v0.20.0
