--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -40,6 +40,7 @@ brew "openjdk"
 brew "pipx"
 brew "ripgrep"
 brew "sops"
+brew "starship"
 brew "terraform-docs"
 brew "terragrunt"
 brew "thefuck"
