--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -22,3 +22,7 @@
 [credential "https://gist.github.com"]
 	helper =
 	helper = !gh auth git-credential
+[oh-my-zsh]
+	hide-info = 1
+	hide-status = 1
+	hide-dirty = 1
