--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -47,6 +47,7 @@ brew "thefuck"
 brew "tree"
 brew "wget"
 brew "yq"
+brew "zoxide"
 
 ##########################################################
 ######################### CASKS ##########################
