--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,18 @@
-[build-system]
-build-backend = "hatchling.build"
-requires = ["hatchling"]
-
 [project]
 name = "dotfiles"
 version = "0.0.0"
+requires-python = ">=3.9,<4"
 
-[tool.hatch.env]
-requires = ["hatch-pip-compile", "hatch-mkdocs"]
+[dependency-groups]
+docs = [
+    "markdown-exec",
+    "mkdocs",
+    "mkdocs-callouts",
+    "mkdocs-gen-files",
+    "mkdocs-material",
+    "mkdocs-section-index",
+    "pymdown-extensions"
+]
 
-[tool.hatch.env.collectors.mkdocs.docs]
-path = "mkdocs.yaml"
-
-[tool.hatch.envs.docs]
-detached = true
-type = "pip-compile"
-lock-filename = "docs/requirements.txt"
+[tool.uv]
+default-groups = ["docs"]
