--- a/tools/starship/starship.toml
+++ b/tools/starship/starship.toml
@@ -24,9 +24,7 @@ ${kotlin}\
 ${haskell}\
 ${python}\
 [](fg:color_blue bg:color_bg3)\
-${docker_context}\
-${conda}\
-${pixi}\
+${aws}\
 [ ](fg:color_bg3)\
 ${fill}\
 [](color_bg3)\
@@ -197,18 +195,10 @@ detect_extensions = []
 detect_files = []
 format = "[[( ${symbol} ${version}( \\(${virtualenv}\\)) )](fg:color_fg0 bg:color_blue)](${style})"
 
-[docker_context]
-symbol = ""
+[aws]
+symbol = ""
 style = "bg:color_bg3"
-format = "[[ ${symbol}( ${context}) ](fg:#83a598 bg:color_bg3)](${style})"
-
-[conda]
-style = "bg:color_bg3"
-format = "[[ ${symbol}( ${environment}) ](fg:#83a598 bg:color_bg3)](${style})"
-
-[pixi]
-style = "bg:color_bg3"
-format = "[[ ${symbol}( ${version})( ${environment}) ](fg:color_fg0 bg:color_bg3)](${style})"
+format = "[[( ${symbol} ${profile} )](fg:color_fg0 bg:color_bg3)](${style})"
 
 [line_break]
 disabled = false
